# pylsp-tokepy

./: README.md  setup.cfg
pylsp_tokepy/: parser.py  plugin.py  testhelpers.py  tokens.py
test/: conftest.py  test_parser.py  test_tokens.py
