
[metadata]
name = pylsp-tokepy
version = 0.1
author = kenny
author_email = kkihara1@gmail.com
url = 
description = Semantic token highlighting for python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License


[options]

packages = find:

install_requires = 
    python-lsp-server
    libcst >=1, < 2

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_tokepy = pylsp_tokepy.plugin


[options.extras_require]
dev =
    pytest
    build
    twine
